.envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  profile_path: /tmp/envoy.prof
  address:
    socket_address: {address: 0.0.0.0, port_value: 9901}

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: {address: 0.0.0.0, port_value: 10000}
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: default
                  virtual_hosts:
                    - name: plantdex
                      domains: ["*"]
                      routes:
                        - match: {prefix: "/api/plants"}
                          route: {cluster: plants}
                        - match: {prefix: "/api/users"}
                          route: {cluster: users}
                        - match: {prefix: "/"}
                          route: {cluster: web}
                http_filters:
                  - name: envoy.filters.http.router

  clusters:
    - name: plants
      connect_timeout: 15s
      type: logical_dns
      load_assignment:
        cluster_name: plants
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: {address: plants, port_value: 8080}
    - name: users
      connect_timeout: 15s
      type: logical_dns
      load_assignment:
        cluster_name: users
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: {address: users, port_value: 8080}
    - name: web
      connect_timeout: 15s
      type: logical_dns
      load_assignment:
        cluster_name: web
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: {address: web, port_value: 8080}
